# memgrep

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  bot.py  bot_api.py  bot_scrape.py  ci.py  clip.py  db.ca  db_test.py  dimitrius.session-journal  docker-compose.yml  drop_all.sh  files.db  gradio_demo.py  mypy.ini  ocr_extract.py  pyproject.toml  requirements.cv.txt  requirements.txt  search.py  settings.py  share_btn.py  simitrius.session
.github/workflows/: docker-image.yml
data/: data_storage.py  db.py  minio_db.py  postgre_db.py  redis_db.py  s3_db.py
data/pg/: alembic.ini  models.py  postgre_db.py
data/pg/migrations/: env.py
entities/: message.py
experimants/: get_images.py
extraction/: caption.py  ocr.py
scraper/: message.py  tg.py
scripts/: add_description.py  db.py  ocr.py  pg2redis.py  sample_images.py  scrape.py  scrape_messages.py  search.py  start_api.py
utils/: funcs.py
