[tool.poetry]
name = "memgrep"
version = "0.1.0"
description = ""
authors = ["Dmiriy Yampolkiy <yampolskiydv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.26.1"
loguru = "^0.6.0"
python-environ = "^0.4.54"
pytesseract = "^0.3.10"
python-telegram-bot = "^20.0"
#clip-interrogator = "==0.4.1"
#
#torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp38-linux_x86_64.whl"}
#torchaudio = {url = "https://download.pytorch.org/whl/cpu/torchaudio-0.11.0%2Bcpu-cp310-cp38-linux_x86_64.whl"}
#torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.12.0%2Bcpu-cp310-cp38-linux_x86_64.whl"}
fuzzysearch = "^0.7.3"
fire = "^0.5.0"
redis = "^4.4.2"
setuptools = "^67.1.0"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
