[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Dmiriy Yampolkiy <yampolskiydv@gmail.com>"]
description = ""
name = "memgrep"
readme = "README.md"
version = "0.1.0"

[[tool.poetry.source]]
name = "torch"
secondary = true
url = "https://download.pytorch.org/whl/cu116"

[tool.ruff]
# not enabled ANN101, EM, RUF, D, ERA, T20, A, N
extend-ignore = [
  "D107",
  "D100",
  "D104",
  "D203",
  "D213",
  "C417",
  "B008",
  "B019",
  "ANN101",
  "S101",
  "PD901",
  "PD002",
  "PD015",
  "PD009",
  "PD008",
  "RET504",
  "PGH004",
  "PLR2004",
  "E741",
  "E402",
  "S108",
  "PLR0913"
]
extend-select = [
  "C",
  "B",
  "UP",
  "W",
  "I",
  "YTT",
  "S",
  "FBT",
  "C4",
  "T10",
  "ICN",
  "RET",
  "SIM",
  "TID",
  "PD",
  "PGH",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PIE",
  "BLE",
  "T",
  "COM",
  "DTZ",
  "Q",
  "ICN",
  "ISC",
  "BLE",
  "C90",
  "E",
  "F"
]
ignore = ["E741", "E402"]
line-length = 120
